--- a/Services.html
+++ b/Services.html
@@ -273,7 +273,7 @@
 
               <br>
 
-              <p style="font-size: 23px;">All accounts are payable within 30 days of statement's daye, which is the last working day of each month. An account not paid within the stated terms will be subject to a late charge of 2% of the unpaid balance and may be subject to a c.o.d status. We stand behind the quality of our dentures and are committed to your satisfaction. With our 30-day warranty, we guarantee that your dentures are free from defects in materials and workmanship for a period of 30 days from the date of delivery or fitting. </p>
+              <p style="font-size: 23px;">All accounts are payable within 30 days of statement's date, which is the last working day of each month. An account not paid within the stated terms will be subject to a late charge of 2% of the unpaid balance and may be subject to a c.o.d status. We stand behind the quality of our dentures and are committed to your satisfaction. With our 30-day warranty, we guarantee that your dentures are free from defects in materials and workmanship for a period of 30 days from the date of delivery or fitting. </p>
 
             </div>
           </div>
@@ -292,8 +292,12 @@
       <div class="container">
         <div class="row">
 
+          <div class="col-lg-3 col-md-6">
+            <img class="logo" src="assets/img/IMG_4008.png" width="200">
+          </div>
+
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Royal Denture Lab</h3>
+            <h3 style="color: #371F76">Royal Denture Lab</h3>
             <p>
               Located in Santa Clarita <br><br>
               <strong>Phone:</strong> +1 818-770-5011<br>
