--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2 style="color: #13084f;">About Us</h2>
+          <h2 style="color: #371F76;">About Us</h2>
         </div>
 
         <div class="row content">
           <div class="centered-div">
             <p>
               
-At Denture Labs, we are committed to revolutionizing the field of dental prosthetics by providing top-tier, custom-crafted dentures that enhance the lives of our patients. Our mission is to restore not just smiles, but confidence, comfort, and overall oral health. With a deep passion for dentistry and a relentless pursuit of excellence, we have established ourselves as a leading authority in the art and science of denture craftsmanship.
+At Royal Denture Labs, we are committed to revolutionizing the field of dental prosthetics by providing top-tier, custom-crafted dentures that enhance the lives of our patients. Our mission is to restore not just smiles, but confidence, comfort, and overall oral health. With a deep passion for dentistry and a relentless pursuit of excellence, we have established ourselves as a leading authority in the art and science of denture craftsmanship.
 
 Our meticulous and comprehensive approach to denture creation sets us apart. Here's a detailed look at what we do:
 
@@ -263,8 +263,12 @@ Our meticulous and comprehensive approach to denture creation sets us apart. Her
       <div class="container">
         <div class="row">
 
+          <div class="col-lg-3 col-md-6">
+            <img class="logo" src="assets/img/IMG_4008.png" width="200">
+          </div>
+
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Royal Denture Lab</h3>
+            <h3 style="color: #371F76">Royal Denture Lab</h3>
             <p>
               Located in Santa Clarita, Los Angeles <br><br>
               <strong>Phone:</strong> +1 818-770-5011<br>
